--- a/thesis.tex
+++ b/thesis.tex
@@ -87,6 +87,7 @@
 
 \usepackage{util} % MDH: Contains my custom commands
 \usepackage{notations} % MDH: So I don't have to repeat myself so much
+\usepackage{hhline}  % MDH: For double lines in tables
 
 % To control where figures are output
 \usepackage[outdir=./build/auxil/content/]{epstopdf}
