Preparations for the final chapter

--- a/content/chapter4-conclusions-and-further-work.tex
+++ b/content/chapter4-conclusions-and-further-work.tex
@@ -11,3 +11,17 @@
 %
 
 \chapter{CONCLUSIONS AND FURTHER WORK}\label{ch:conclusions-and-further-work}
+
+\section{Summary}\label{sec:summary}
+
+
+\section{Further Work and Improvements}\label{sec:further-work-and-improvements}
+% FIXME: This might need to be moved to Chapter 4
+% - Multiple levels of expertise. Expert voters could have varying levels of
+% accuracy, allowing for more complex systems.
+% - (If I decide to restrict experts and untrained to the same mins and maxes)
+% Allow for untrained to have a lower restriction, making them less accurate.
+% - Independently track time, monetary cost, etc. for system cost (described
+% in the cost section of Criteria. Useful identifying multiple systems for
+% different costs.
+% Closer look into instances where proxy voting works better than weightlessly averaging
