Added distribution images

--- a/notations.sty
+++ b/notations.sty
@@ -44,13 +44,13 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\systemweight}{\weightof{\system}}
 
 % Templates
-\newcommand*{\betadistribution}[2]{\ensuremath{\mathcal{B}{(#1, #2)}}}
-\newcommand*{\costof}[1]{\ensuremath{\cost{(#1)}}}
-\newcommand*{\gaussian}[2]{\ensuremath{\mathcal{N}{(#1, #2)}}}
-\newcommand*{\lossof}[1]{\ensuremath{\loss{(#1)}}}
-\newcommand*{\truthof}[1]{\ensuremath{\truth{(#1)}}}
+\newcommand*{\betadistribution}[2]{\ensuremath{\mathcal{B}{\left(#1, #2\right)}}}
+\newcommand*{\costof}[1]{\ensuremath{\cost{\left(#1\right)}}}
+\newcommand*{\gaussian}[2]{\ensuremath{\mathcal{N}{\left(#1, #2\right)}}}
+\newcommand*{\lossof}[1]{\ensuremath{\loss{\left(#1\right)}}}
+\newcommand*{\truthof}[1]{\ensuremath{\truth{\left(#1\right)}}}
 \newcommand*{\uniform}[2]{\ensuremath{\mathcal{U}_{[#1, #2]}}}
-\newcommand*{\weightof}[1]{\ensuremath{\weight{(#1)}}}
+\newcommand*{\weightof}[1]{\ensuremath{\weight{\left(#1\right)}}}
 
 % Distributions
 \@newnotation*{\betadist}{\betadistribution{\alpha}{\beta}}
