--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -59,18 +59,83 @@ location. % FIXME
 \end{table}
 
 \appendixsection{Distributions used}
-% TODO: Add graphs of distributions used
-\begin{table}[htbp]
-    % increase table row spacing, adjust to taste
-    \renewcommand{\arraystretch}{1.3}
+The following distributions are used by agents to vote:
+\begin{itemize}
+    \item Uniform (\uniform{-1}{1}; \autoref{fig:uniform})
+    \item Gaussian (\gaussian{0}{\frac{1}{3}}; \autoref{fig:gaussian})
+    \item Beta(0.3, 0.3) (\betadistribution{0.3}{0.3}; \autoref{fig:beta-0.3-0.3})
+    \item Beta(0.3, 4) (\betadistribution{0.3}{3}; \autoref{fig:beta-0.3-3})
+    \item Beta(3, 0.3) (\betadistribution{3}{0.3}; \autoref{fig:beta-3-0.3})
+    \item Beta(4, 4) (\betadistribution{4}{4}; \autoref{fig:beta-4-4})
+    \item Beta(1, 4) (\betadistribution{1}{4}; \autoref{fig:beta-1-4})
+    \item Beta(4, 1) (\betadistribution{4}{1}; \autoref{fig:beta-4-1})
+\end{itemize}
 
-    \caption{List of distributions used by agents to vote.}
-    \label{tab:distributions}
-
+\begin{figure}[!h]
     \centering
-    \begin{tabular}{|c|c|c|}
-    \end{tabular}
-\end{table}
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/uniform}
+    \caption{\uniform{-1}{1}}
+    \label{fig:uniform}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/gaussian}
+    \caption{\gaussian{0}{\frac{1}{3}}}
+    \label{fig:gaussian}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/beta_0.3_0.3}
+    \caption{\betadistribution{0.3}{0.3}}
+    \label{fig:beta-0.3-0.3}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/beta_0.3_3}
+    \caption{\betadistribution{0.3}{3}}
+    \label{fig:beta-0.3-3}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/beta_3_0.3}
+    \caption{\betadistribution{3}{0.3}}
+    \label{fig:beta-3-0.3}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/beta_4_4}
+    \caption{\betadistribution{4}{4}}
+    \label{fig:beta-4-4}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/beta_1_4}
+    \caption{\betadistribution{1}{4}}
+    \label{fig:beta-1-4}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/dists/beta_4_1}
+    \caption{\betadistribution{4}{1}}
+    \label{fig:beta-4-1}
+\end{figure}
+
+
 
 \appendixsection{Voting Mechanism P-Values}
 \autoref{fig:all-voting-mechanisms-p-values} illustrates the p-values for all voting
