--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -26,22 +26,14 @@
 \appendix{Voting Distributions}\label{chap:voting-distributions}
 
 \appendixsection{Percent inside Extents}
-% TODO: Add description of table
-This is placeholder text to ensure
-\autoref{tab:distributions-percent-inside-extents} stays in the correct
-location. % FIXME
-
-% - Distribution of votes
-%     - Uniform
-%     - Gaussian
-%     - Bimodal about center
-%     - Skewed?
+\autoref{tab:distributions-percent-inside-extents} displays the percent of votes that
+remain inside the desired extents per distribution.
 
 \begin{table}[htbp]
     % increase table row spacing, adjust to taste
     \renewcommand{\arraystretch}{1.3}
 
-    \caption{List of distributions used by agents to vote.}
+    \caption{The percent of votes that remain inside the desired extents.}
     \label{tab:distributions-percent-inside-extents}
 
     \centering
@@ -135,8 +127,6 @@ The following distributions are used by agents to vote:
     \label{fig:beta-4-1}
 \end{figure}
 
-
-
 \appendixsection{Voting Mechanism P-Values}
 \autoref{fig:all-voting-mechanisms-p-values} illustrates the p-values for all voting
 mechanisms, given the alternative is one population is lesser than the other.
@@ -163,7 +153,8 @@ the `to' mechanism.
 
 \appendixsection{Distributions of Variables}
 The distribution of variables for each voting mechanism is displayed as a
-KDE graph in the figures of this section.
+KDE graph in \autoref{fig:voting_mechanisms_error_distribution} and
+\autoref{fig:voting_mechanisms_estimate_distribution}.
 
 \begin{figure}[!t]
     \centering
