--- a/content/chapter4-conclusions-and-further-work.tex
+++ b/content/chapter4-conclusions-and-further-work.tex
@@ -4,8 +4,32 @@
 
 \chapter{CONCLUSIONS AND FURTHER WORK}\label{ch:conclusions-and-further-work}
 
-\section{Summary}\label{sec:summary}
+\section{Conclusions}\label{sec:conclusions}
+Proxy vote systems as a method to increase system accuracy are situational tools.
+This technique is best used when one of the distributions of error is asymmetrical,
+and thus require the expected distribution of error to be known.
+However, under the correct circumstances a proxy vote system can be used to increase
+the accuracy of a system.
+Additionally, not all proxy vote systems are created equally and some combinations of
+voting and weighting mechanisms can be more effective than others.
+As such, the proxy vote system and the mechanisms used should be chosen after
+understanding the problem for which the system is desired to solve.
 
+Furthermore, the ratio between proxies and inactive agents should be chosen well.
+As previously shown, all systems, including weightlessly averaging all agents, benefit
+from an appropriate number of agents.
+As discussed in~\fullref{sec:how-many-agents}, this sweet spot appears to be between
+10 and 15 proxies, with slightly more or less inactive agents.
+This may cause using such techniques to be too expensive if it is not possible to use
+sufficiently cheap proxies and inactive agents.
+However, if such agents are available the proxy vote or weightless average approach
+may be able to achieve better performance than alternative techniques that cost more
+than the combined sum of the agents used.
+
+Overall, proxy vote systems as a method to increase system accuracy appears to show
+promise under some circumstances.
+Further research may be required to identify its full capabilities and weaknesses
+before its full potential can be exploited.
 
 \section{Further Work and Improvements}\label{sec:further-work-and-improvements}
 % FIXME: This might need to be moved to Chapter 4
