Further improvements done

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -440,7 +440,9 @@ Additionally, all extents can be set to 1, which can easily be scaled to any
 desired number simply my multiplying by that number.
 Using the same extents also makes it much easier to determine where an agent
 can vote since the interval will be $[-1, 1]$.
-This, again, should not make any meaningful differences to the final analysis.
+While using extents of 1 should not make any meaningful differences to the final
+analysis, it should be noted that further work could be done using additional extents
+to more accurately reflect expert and untrained measurements in the real world.
 
 \subsection{Data Collection}\label{subsec:data-collection}
 % Steps
