--- a/content/chapter4-conclusions-and-further-work.tex
+++ b/content/chapter4-conclusions-and-further-work.tex
@@ -44,6 +44,11 @@ distribution is asymmetrical.
 This idea can be further developed and refined to develop more specific rules as to
 when proxy vote systems are superior to simply averaging all agents.
 
+There may be potential application for proxy vote systems used in ensemble machine
+learning methods where some form of voting already takes place, such as random forests.
+Proxy votes may allow for new ensemble methods where some `agents' or trees are more
+well-trained and serve as experts, while other agents remain cheaper to train.
+
 Finally, this study assumes all agents, both expert and untrained, have the same
 extents, or range of estimates.
 In the real world, this is likely not the case--the range of error with less accurate
