Added some appendix stuff

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -1,17 +1,7 @@
 %
-%  Example Appendix pages.
-%  Modified to use new usu-thesis-mk2 appendix facilities.
+%  Contains the appendix for the thesis
 %
-%  Time-stamp: "[appendix.tex] last modified by Scott Budge (scott) on
-%  2021-06-28 (Monday, 28 June 2021) at 09:03:44 on goga.ece.usu.edu"
-%
-%  Info: $Id: appendix.tex 1183 2021-06-28 16:49:30Z scott $   USU
-%  Revision: $Rev: 1183 $
-% $LastChangedDate: 2021-06-28 10:49:30 -0600 (Mon, 28 Jun 2021) $
-% $LastChangedBy: scott $
-%
-%
-% For a single appendix, use \makeappendix, and place the 
+% For a single appendix, use \makeappendix, and place the
 % body of the appendix after it
 
 %\makeappendix
@@ -183,6 +173,11 @@ KDE graph in \autoref{fig:voting_mechanisms_error_distribution} and
 \end{figure}
 
 \appendix{Visualizations}\label{chap:visualizations}
+\autoref{fig:expected_even_distribution_squared_error} displays the expected look of
+a boxen plot when the estimate distribution is uniform, while
+\autoref{fig:expected_gaussian_distribution_squared_error} shows the expected look
+when the estimate distribution is normal or Gaussian.
+
 \begin{figure}[htbp]
     \centering
     \includegraphics[scale=0.5]
