--- a/content/frontmatter/notation.tex
+++ b/content/frontmatter/notation.tex
@@ -12,22 +12,28 @@
     % TODO: Alphabetize these by symbol
     \begin{tabular}{ll}
         \notationheader{Variables and Functions}
+
         \notationdesc{\agent}{An individual agent}
         \notationdesc{\agentcost}{The cost of using an individual agent}
         \notationdesc{\agents}{The set of all agents}
+        \notationdesc{\agenttruth}{The truth as estimated by an agent}
+        \notationdesc{\agentweight}{The weight of an agent}
         \notationdesc{\cost}{Cost}
         \notationdesc{\loss}{Loss}
         \notationdesc{\mean}{Mean/Average}
+        \notationdesc{\proxies}{The set of all proxies}
         \notationdesc{\real}{The set of all real numbers}
         \notationdesc{\stddeviation}{Standard deviation}
         \notationdesc{\system}{A system}
-        \notationdesc{\systemspace}{The space within a system operates}
-        \notationdesc{\truth}{Truth}
-        \notationdesc{\agenttruth}{The truth as estimated by an agent}
         \notationdesc{\systemagents}{The agents of a system}
         \notationdesc{\systemcost}{The cost of a system}
         \notationdesc{\systemloss}{The loss of a system}
+        \notationdesc{\systemspace}{The space within a system operates}
         \notationdesc{\systemtruth}{The truth as estimated by a system}
+        \notationdesc{\systemweight}{The total weight of a system}
+        \notationdesc{\truth}{Truth}
+        \notationdesc{\weight}{Weight}
+
 
         \notationheader{Distributions}
         \notationdesc{\uniformdist}{Uniform on the interval $[a, b]$}
