--- a/thesis.tex
+++ b/thesis.tex
@@ -100,9 +100,7 @@
 
 % Author and Title Information
 \author{Michael D. Hegerhorst}
-% TODO: Pick title
-\title{A Complicated and Impressive Sounding Title that is Too Long
-For a Single Line While Including Everything}
+\title{An Exploration into using Proxy Votes to Increase System Accuracy}
 
 % The Committee
 \majorprof{Vicki Allan, Ph.D.}
