Removed parts I don't need

--- a/thesis.tex
+++ b/thesis.tex
@@ -137,7 +137,7 @@
     \listoffigures
 
     \include{content/frontmatter/notation}  % optional
-    \include{content/frontmatter/acronyms}  % optional
+    % \include{content/frontmatter/acronyms}  % optional
     %}}}
     %{{{ The main body of the thesis
     \body  % set main body style
@@ -146,15 +146,6 @@
     \include{content/chapter2-experimental-design}
     \include{content/chapter3-results}
     \include{content/chapter4-conclusions-and-further-work}
-% TODO Research to be done:
-%   - Any similar papers
-%   - Finite proxy voting
-%  Those below will likely require a specific type of sensor
-%   - Current sensor error mitigation techniques
-%   - Typical sensor error rates
-%   - Sensor variance
-%   - Sensor error distributions (e.g.\ Gaussian)
-
 
     % Endmatter
     % For BibTeX references: specify a .bib file and a style.
@@ -169,6 +160,6 @@
 %    \references{IEEEabrv,sample}{aiaa}
 
     \include{content/endmatter/appendix}
-%    \include{vita}  % TODO: I don't think I actually need this unless I'm a doctorate.
+%    \include{vita}  % FIXME: I don't think I actually need this unless I'm a doctorate.
     %}}}
 \end{document}
