Wrote public abstract

--- a/content/frontmatter/publicabstract.tex
+++ b/content/frontmatter/publicabstract.tex
@@ -11,8 +11,14 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly.
 
-The public abstract is to convey the purpose of the research to the
-PUBLIC, so layman's terms should be used.
+Proxy voting is a type of voting where individuals are able to pass their votes to
+someone else so they may vote for them.
+This type of voting system allows for those without the time or knowledge necessary
+to become informed on a topic to pass their votes to an individual they trust who
+knows more about the topic, dubbed an expert.
+This study investigates the ability of proxy vote systems to be used as a way to make
+taking measurements more accurate by allowing less expensive measurements to pass their
+vote on to more expensive `expert' measurement techniques.
 
 
 \end{publicabstract}
