--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -9,12 +9,27 @@
 
 \begin{abstract}
 % A space is needed before the text starts so that the first paragraph
-% is indented properly.
+% is indented properly. Max 350 words.
+% TODO
 
-This is the abstract of the demonstration thesis.  Hopefully the
-examples will be sufficiently clear that you will have few formatting
-problems. The Graduate School requires that the abstract be 350 words
-or less, so be careful of the length of the abstract.
+    A proxy voting system is a system in which agents are able to give their vote to
+    other agents, known as proxies.
+    These proxies vote on behalf of the agents who gave up their vote.
+    The idea behind this type of voting system is it allows agents without the time
+    or knowledge necessary to properly become informed on a topic to become
+    inactive and pass their vote to a proxy that does.
+    The hope is this proxy will be an expert in on the topic and so yield a more
+    informed end decision.
+    This study looks into exploiting this proxy-inactive agent relationship in order
+    to increase the accuracy of a measurement system while using less expensive forms
+    of measurement.
+    Multiple types of voting, dubbed `voting mechanisms,' are identified and tested,
+    as well as several ways to allow inactive agents to divide their votes amongst
+    proxies named `weighting mechanisms.'
+    While it is ultimately discovered that proxy vote systems should not be used in
+    all situations, this study is able to identify potential applications for
+    employing proxy vote systems as well as lay out potential avenues of additional
+    research.
 
 \end{abstract}
 
