Fixed removed table being referenced

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -193,7 +193,7 @@ might have.
 The vote distribution determines which distribution is used by the agent when
 attempting to measure \truth.
 The distributions used in this study are found
-in~\autoref{tab:distributions}.
+in~\autoref{sec:distributions-used}.
 These distributions, combined with the extent, have a large influence on the
 agent's ability to measure \truth.
 
