--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -40,7 +40,7 @@ remain inside the desired extents per distribution.
     \end{tabular}
 \end{table}
 
-\appendixsection{Distributions used}
+\appendixsection{Distributions used}\label{sec:distributions-used}
 The following distributions are used by agents to vote:
 \begin{itemize}
     \item Uniform (\uniform{-1}{1}; \autoref{fig:uniform})
